--- a/site/pages/v4/design/alerts-en.hbs
+++ b/site/pages/v4/design/alerts-en.hbs
@@ -11,9 +11,9 @@
 <div class="row">
 	<div class="col-md-8">
 		<section class="panel panel-default">
-			<div class="panel-heading">
+			<header class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</div>
+			</header>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#description">Description</a></li>
@@ -91,12 +91,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -157,12 +157,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
