--- a/site/pages/v4/design/alignment-en.hbs
+++ b/site/pages/v4/design/alignment-en.hbs
@@ -4,61 +4,78 @@
 	"language": "en",
 	"altLangPrefix": "alignment",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-02"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#options">Text alignment options</a></li>
-      <li><a href="#centre">Centre content blocks</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="floats-en.html">Floats<span class="wb-inv"> - Design guide</span></a></li>
-    </ul>
-   </div>
-  </div>
- </div>
- <h2 class="page-header" id="description">Description</h2>
- <p>Easily realign text to components with text alignment classes.</p>
- <h2 class="page-header" id="options">Text alignment options</h2>
- <p>Easily realign text to components with text alignment classes.</p>
- <p class="text-left">Left aligned text.</p>
- <p class="text-center">Center aligned text.</p>
- <p class="text-right">Right aligned text.</p>
- <div class="mrgn-tp-lg">
-  <pre><code>&lt;p class=&quot;text-left&quot;&gt;Left aligned text.&lt;/p&gt;
-&lt;p class=&quot;text-center&quot;&gt;Center aligned text.&lt;/p&gt;
-&lt;p class=&quot;text-right&quot;&gt;Right aligned text.&lt;/p&gt;
-</code></pre>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <h2 class="page-header" id="centre">Centre content blocks </h2>
- <p>Set an element to <code>display: block</code> and center via <code>margin</code>.</p>
- <img src="http://placehold.it/140x140" class="img-rounded center-block" alt="A generic square placeholder image with rounded corners">
- <pre class="mrgn-tp-lg"><code>&lt;img class=&quot;center-block&quot; alt=&quot;...&quot; src=&quot;x.jpg&quot; /&gt;</code></pre>
- <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#options">Text alignment options</a></li>
+					<li><a href="#centre">Centre content blocks</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="floats-en.html">Floats<span class="wb-inv"> - Design guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>Easily realign text to components with text alignment classes.</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="options">Text alignment options</h2>
+	<p>Easily realign text to components with text alignment classes.</p>
+	<p class="text-left">Left aligned text.</p>
+	<p class="text-center">Center aligned text.</p>
+	<p class="text-right">Right aligned text.</p>
+
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;p class=&quot;text-left&quot;&gt;Left aligned text.&lt;/p&gt;
+&lt;p class=&quot;text-center&quot;&gt;Center aligned text.&lt;/p&gt;
+&lt;p class=&quot;text-right&quot;&gt;Right aligned text.&lt;/p&gt;</code></pre>
+	</div>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="centre">Centre content blocks</h2>
+	<p>Set an element to <code>display: block</code> and center via <code>margin</code>.</p>
+	<img src="http://placehold.it/140x140" class="img-rounded center-block" alt="A generic square placeholder image with rounded corners" />
+
+	<pre class="mrgn-tp-lg"><code>&lt;img class=&quot;center-block&quot; alt=&quot;...&quot; src=&quot;x.jpg&quot; /&gt;</code></pre>
+</section>
+
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+	
