--- a/site/pages/v4/design/jumbotron-en.hbs
+++ b/site/pages/v4/design/jumbotron-en.hbs
@@ -4,71 +4,85 @@
 	"language": "en",
 	"altLangPrefix": "jumbotron",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-02"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#default">Default jumbotron</a></li>
-      <li><a href="#full">Full width jumbotron</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
- </div>
- <h2 class="page-header" id="description">Description</h2>
- <p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p>
- <h2 class="page-header" id="default">Default jumbotron</h2>
- <div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
- </div>
- <div class="mrgn-tp-lg">
-  <pre><code>&lt;div class=&quot;jumbotron&quot;&gt;
-  &lt;h1&gt;Hello, world!&lt;/h1&gt;
-  &lt;p&gt;...&lt;/p&gt;
-  &lt;p&gt;&lt;a class=&quot;btn btn-primary btn-lg&quot; role=&quot;button&quot;&gt;Learn more&lt;/a&gt;&lt;/p&gt;
-&lt;/div&gt;
-</code></pre>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <h2 class="page-header" id="full">Full width jumbotron</h2>
- <p>To make the jumbotron full width, and without rounded corners, place it outside all <code>.container</code>s and instead add a <code>.container</code> within.</p>
- <div class="mrgn-tp-lg">
-  <pre><code>&lt;div class=&quot;jumbotron&quot;&gt;
-  &lt;div class=&quot;container&quot;&gt;
-    ...
-  &lt;/div&gt;
-&lt;/div&gt;
-</code></pre>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#default">Default jumbotron</a></li>
+					<li><a href="#full">Full width jumbotron</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>A lightweight, flexible component that can optionally extend the entire viewport to showcase key content on your site.</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="default">Default jumbotron</h2>
+	<section class="jumbotron">
+		<h3>Hello, world!</h3>
+		<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		<p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
+	</section>
+
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;section class=&quot;jumbotron&quot;&gt;
+	&lt;h3&gt;Hello, world!&lt;/h3&gt;
+	&lt;p&gt;...&lt;/p&gt;
+	&lt;p&gt;&lt;a class=&quot;btn btn-primary btn-lg&quot; role=&quot;button&quot;&gt;Learn more&lt;/a&gt;&lt;/p&gt;
+&lt;/div&gt;</code></pre>
+	</div>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="full">Full width jumbotron</h2>
+	<p>To make the jumbotron full width, and without rounded corners, place it outside all <code>.container</code>s and instead add a <code>.container</code> within.</p>
+
+	<div class="mrgn-tp-lg">
+		<pre><code>&lt;section class=&quot;jumbotron&quot;&gt;
+	&lt;div class=&quot;container&quot;&gt;
+	...
+	&lt;/div&gt;
+&lt;/section&gt;</code></pre>
+	</div>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
