--- a/site/pages/v4/design/panels-en.hbs
+++ b/site/pages/v4/design/panels-en.hbs
@@ -12,9 +12,9 @@
 <div class="row">
 	<section class="col-md-8">
 		<div class="panel panel-default">
-			<div class="panel-heading">
+			<header class="panel-heading">
 				<h2 class="panel-title">Table of contents</h2>
-			</div>
+			</header>
 			<div class="panel-body">
 				<ul>
 					<li><a href="#description">Description</a></li>
@@ -65,12 +65,12 @@
  
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -101,12 +101,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -133,12 +133,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -242,12 +242,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -333,12 +333,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -430,12 +430,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
@@ -478,12 +478,12 @@
 
 	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
 		<section class="col-md-6">
-			<h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 
 		<section class="col-md-6 brdr-lft">
-			<h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
 			<p>(Info goes here)</p>
 		</section>
 	</div>
