--- a/site/pages/v4/design/borders-en.hbs
+++ b/site/pages/v4/design/borders-en.hbs
@@ -4,138 +4,176 @@
 	"language": "en",
 	"altLangPrefix": "borders",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-03"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#options">Border options</a></li>
-      <li><a href="#radius">Remove border radius</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="headings-en.html#underline">Underline headings<span class="wb-inv"> - Design guide</span></a></li>
-    </ul>
-   </div>
-  </div>
- </div>
- <h2 class="page-header" id="description">Description</h2>
- <p>Borders can be added to grids or other elements in order to separate or call attention to a section of content.</p>
- <h2 class="page-header" id="options">Border options</h2>
- <p>There are 4 borders that can be added:</p>
- <ul>
-  <li><code>.brdr-tp</code></li>
-  <li><code>.brdr-rght</code></li>
-  <li><code>.brdr-bttm</code></li>
-  <li><code>.brdr-lft</code></li>
- </ul>
- <p>Borders can be added to a grid cell. Since grids have a left and right gutter, the border will be appear on outside edge of the gutter.</p>
- <div class="row">
-  <div class="col-md-3 brdr-tp">
-   <p class="mrgn-tp-md">Top border</p>
-   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
-  </div>
-  <div class="col-md-3 brdr-rght">
-   <p class="mrgn-tp-md">Right border</p>
-   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-rght&quot;&gt;</code></p>
-  </div>
-  <div class="col-md-3 brdr-bttm">
-   <p class="mrgn-tp-md">Top bottom</p>
-   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm&quot;&gt;</code></p>
-  </div>
-  <div class="col-md-3 brdr-lft">
-   <p class="mrgn-tp-md">Left border</p>
-   <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-lft&quot;&gt;</code></p>
-  </div>
- </div>
- <p>Borders can be added to content.</p>
- <div class="row">
-  <div class="col-md-3">
-   <p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md">Top border<br>
-    <code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
-  </div>
-  <div class="col-md-3">
-   <p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md">Right border<br>
-    <code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
-  </div>
-  <div class="col-md-3">
-   <p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md">Bottom border<br>
-    <code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
-  </div>
-  <div class="col-md-3">
-   <p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md">Left border<br>
-    <code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
-  </div>
- </div>
- <p>Multiple borders can be added to the same element.</p>
- <div class="row">
-  <div class="col-md-3 brdr-tp brdr-lft">
-   <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Top and left border <br>
-    <code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
-  </div>
-  <div class="col-md-3 brdr-bttm brdr-rght">
-   <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Bottom and right border <br>
-    <code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
-  </div>
-  <div class="col-md-6">
-   <div class="brdr-tp brdr-rght brdr-bttm brdr-lft">
-    <p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border <br>
-     <code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p>
-   </div>
-  </div>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <h2 class="page-header" id="radius">Remove border radius</h2>
- <p>Apply <code>brdr-rds-0</code> to remove the border radius that appears on certain design elements,</p>
- <div class="row">
-  <div class="col-sm-6">
-   <div class="well">
-    <p>Default well</p>
-   </div>
-   <pre><code>&lt;div class=&quot;well&quot;&gt;
-  ...
-&lt;/div&gt;</code></pre>
-  </div>
-  <div class="col-sm-6 ">
-   <div class="well brdr-rds-0">
-    <p>Well with border radius removed</p>
-   </div>
-   <pre><code>&lt;div class=&quot;well brdr-rds-0 &quot;&gt;
-  ...
-&lt;/div&gt;</code></pre>
-  </div>
- </div>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#options">Border options</a></li>
+					<li><a href="#radius">Remove border radius</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="headings-en.html#underline">Underline headings<span class="wb-inv"> - Design guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>Borders can be added to grids or other elements in order to separate or call attention to a section of content.</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="options">Border options</h2>
+	<p>There are 4 borders that can be added:</p>
+	<ul>
+		<li><code>.brdr-tp</code></li>
+		<li><code>.brdr-rght</code></li>
+		<li><code>.brdr-bttm</code></li>
+		<li><code>.brdr-lft</code></li>
+	</ul>
+
+	<section>
+		<h3>Adding borders to a grid cell</h3>
+		<p>Borders can be added to a grid cell. Since grids have a left and right gutter, the border will be appear on outside edge of the gutter.</p>
+
+		<ul class="row list-unstyled">
+			<li class="col-md-3 brdr-tp">
+				<p class="mrgn-tp-md">Top border</p>
+				<p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
+			</li>
+
+			<li class="col-md-3 brdr-rght">
+				<p class="mrgn-tp-md">Right border</p>
+				<p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-rght&quot;&gt;</code></p>
+			</li>
+
+			<li class="col-md-3 brdr-bttm">
+				<p class="mrgn-tp-md">Top bottom</p>
+				<p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm&quot;&gt;</code></p>
+			</li>
+
+			<li class="col-md-3 brdr-lft">
+				<p class="mrgn-tp-md">Left border</p>
+				<p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-lft&quot;&gt;</code></p>
+			</li>
+		</ul>
+	</section>
+
+	<section>
+		<h3>Adding borders to content</h3>
+
+		<ul class="row list-unstyled">
+			<li class="col-md-3">
+				<p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md">Top border<br />
+				<code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
+			</li>
+
+			<li class="col-md-3">
+				<p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md">Right border<br />
+				<code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
+			</li>
+
+			<li class="col-md-3">
+				<p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md">Bottom border<br />
+				<code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
+			</li>
+
+			<li class="col-md-3">
+				<p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md">Left border<br />
+				<code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
+			</li>
+		</ul>
+	</section>
+
+	<section>
+		<h3>Adding multiple borders to the same element</h3>
+
+		<ul class="row list-unstyled">
+			<li class="col-md-3 brdr-tp brdr-lft">
+				<p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Top and left border<br />
+				<code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
+			</li>
+
+			<li class="col-md-3 brdr-bttm brdr-rght">
+				<p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Bottom and right border<br />
+				<code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
+			</li>
+
+			<li class="col-md-6">
+				<div class="brdr-tp brdr-rght brdr-bttm brdr-lft">
+					<p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border<br />
+					<code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p>
+				</div>
+			</li>
+		</ul>
+	</section>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<section>
+	<h2 class="page-header" id="radius">Remove border radius</h2>
+	<p>Apply <code>brdr-rds-0</code> to remove the border radius that appears on certain design elements,</p>
+
+	<ul class="row list-unstyled">
+		<li class="col-sm-6">
+			<div class="well">
+				<p>Default well</p>
+			</div>
+			<pre><code>&lt;div class=&quot;well&quot;&gt;
+	...
+&lt;/div&gt;</code></pre>
+		</li>
+
+		<li class="col-sm-6 ">
+			<div class="well brdr-rds-0">
+				<p>Well with border radius removed</p>
+			</div>
+			<pre><code>&lt;div class=&quot;well brdr-rds-0 &quot;&gt;
+	...
+&lt;/div&gt;</code></pre>
+		</li>
+	</ul>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+	<section class="col-md-6 brdr-lft">
+		<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+		<p>(Info goes here)</p>
+	</section>
+</section>
