--- a/site/pages/v4/design/visible-en.hbs
+++ b/site/pages/v4/design/visible-en.hbs
@@ -4,7 +4,7 @@
 	"language": "en",
 	"altLangPrefix": "visible",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome", "css/visible-demo"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-08"
 }
 ---
 <div class="wb-prettify all-pre">
@@ -214,8 +214,8 @@
      <code>visible-sm visible-md</code></span> </div>
    </div>
    <h2 class="page-header" id="invisible">Screen reader invisible content</h2>
-   <p>The <code>wb-invisible</code> class clips content into a one pixel square. It allows you to create links that are descriptive (and compliant), but not visually clutter the page. It is common to use this technique to target assistive technology users. For example, JAWS users hear the information, but the visual user does not hear or see it. The <abbr title="Cascading Style Sheet">CSS</abbr> attribute <code>display:none;</code> does not achieve the same effect, as JAWS ignores this style entirely.</p>
-   <pre><code>&lt;a class=&quot;button button-small&quot; href=&quot;#&quot;&gt;1&lt;span class=&quot;wb-invisible&quot;&gt;: Page 1 of search results&lt;/span&gt;&lt;/a&gt;</code></pre>
+   <p>The <code>wb-inv</code> class clips content into a one pixel square. It allows you to create links that are descriptive (and compliant), but not visually clutter the page. It is common to use this technique to target assistive technology users. For example, JAWS users hear the information, but the visual user does not hear or see it. The <abbr title="Cascading Style Sheet">CSS</abbr> attribute <code>display:none;</code> does not achieve the same effect, as JAWS ignores this style entirely.</p>
+   <pre><code>&lt;a class=&quot;button button-small&quot; href=&quot;#&quot;&gt;1&lt;span class=&quot;wb-inv&quot;&gt;: Page 1 of search results&lt;/span&gt;&lt;/a&gt;</code></pre>
    <h2 class="page-header" id="general">General showing and hiding</h2>
    <p>Force an element to be shown or hidden with the use of <code>.show</code> and <code>.hidden</code> classes. These classes use <code>!important</code> to a
    <p>Furthermore, <code>.invisible</code> can be used to toggle only the visibility of an element, meaning its <code>display</code> is not modified and the element can still affect the flow of the document.</p>
