More guidance cleanup
Fixes #167

--- a/site/pages/v4/design/buttons-en.hbs
+++ b/site/pages/v4/design/buttons-en.hbs
@@ -257,7 +257,7 @@
 			<pre><code>&lt;ul class=&quot;list-inline&quot;&gt;
 	&lt;li&gt;&lt;button type=&quot;button&quot; class=&quot;btn btn-primary btn-lg active&quot;&gt;Primary button&lt;/button&gt;&lt;/li&gt;
 	&lt;li&gt;&lt;button type=&quot;button&quot; class=&quot;btn btn-default btn-lg active&quot;&gt;Button&lt;/button&gt;&lt;/li&gt;
-&lt;/ul&gt;&lt;code&gt;</pre>
+&lt;/ul&gt;&lt;code&gt;</code></pre>
 		</div>
 
 		<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
@@ -330,8 +330,8 @@
 		<h3>Anchor element</h3>
 		<p>Add the <code>disabled</code> class to <code>&lt;a&gt;</code> buttons.</p>
 		<ul class="list-inline">
-			<li><a href="#" class="btn btn-primary btn-lg disabled" role="button">Primary link</a></li>
-			<li><a href="#" class="btn btn-default btn-lg disabled" role="button">Link</a></li>
+			<li><a class="btn btn-primary btn-lg disabled" role="button">Primary link</a></li>
+			<li><a class="btn btn-default btn-lg disabled" role="button">Link</a></li>
 		</ul>
 
 		<div class="mrgn-tp-lg">
@@ -345,7 +345,7 @@
 
 		<section class="alert alert-warning">
 			<h4>Link functionality not impacted</h4>
-			<p>This class will only change the <code>&lt;a&gt;</code>'s appearance, not its functionality. Use custom JavaScript to disable links here.</p>
+			<p>This class will only change the <code>&lt;a&gt;</code>'s appearance, not its functionality. Remove the href attribute to disable links here.</p>
 		</section>
 
 		<section class="alert alert-warning">
@@ -579,7 +579,7 @@
 				<section class="col-md-6 brdr-lft">
 					<h5 class="mrgn-tp-0 text-danger">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h5>
 					<p>(Info goes here)</p>
-				</setion>
+				</section>
 			</div>
 		</section>
 	</section>
