--- a/site/pages/v4/design/labels-en.hbs
+++ b/site/pages/v4/design/labels-en.hbs
@@ -4,65 +4,92 @@
 	"language": "en",
 	"altLangPrefix": "labels",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-10"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#options">Label options</a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4 pull-right">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a></li>
-     <li><a href="colour-en.html">Colour<span class="wb-inv"> - Design guide</span></a></li>
-    </ul>
-    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
-    </ul>
-   </div>
-  </div>
- </div>
- <h2 class="page-header mrgn-tp-md" id="description">Description</h2>
- <p>(Info goes here)</p>
- <h2 class="page-header" id="options">Label options</h2>
- <p>Label options:</p>
- <span class="label label-default">Default</span> <span class="label label-primary">Primary</span> <span class="label label-success">Success</span> <span class="label label-info">Info</span> <span class="label label-warning">Warning</span> <span class="label label-danger">Danger</span>
- <pre class="mrgn-tp-md"><code class="html">&lt;span class= &quot;label label-default&quot;&gt;Default&lt;/span&gt;
-&lt;span class= &quot;label label-primary&quot;&gt;Primary&lt;/span&gt;
-&lt;span class= &quot;label label-success&quot;&gt;Success&lt;/span&gt;
-&lt;span class= &quot;label label-info&quot;&gt;Info&lt;/span&gt;
-&lt;span class= &quot;label label-warning&quot;&gt;Warning&lt;/span&gt;
-&lt;span class= &quot;label label-danger&quot;&gt;Danger&lt;/span&gt;
-</code></pre>
- <h3 id="examples">Examples</h3>
- <p>Some text here <span class="label label-default">New</span></p>
- <p>Some text here <span class="label label-primary">Updated</span></p>
- <pre><code>&lt;p&gt;Some text here &lt;span class=&quot;label label-default&quot;&gt;New&lt;/span&gt;&lt;/p&gt; 
-&lt;p&gt;Some text here &lt;span class=&quot;label label-primary&quot;&gt;Updated&lt;/span&gt;&lt;/p&gt;</code></pre>
- <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
-  <div class="col-md-6">
-   <h3 class="mrgn-tp-0 text-success h4"><strong>Use when <span class="glyphicon glyphicon-ok-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
-  <div class="col-md-6 brdr-lft">
-   <h3 class="mrgn-tp-0 text-danger h4"><strong>Do not use when <span class="glyphicon glyphicon-remove-circle"></span></strong></h3>
-   <p>(Info goes here)</p>
-  </div>
- </div>
- <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
+<span class="wb-prettify all-pre"></span>
+ 
+<div class="row">
+	<section class="col-md-8">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#options">Label options</a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4 pull-right">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="badges-en.html">Badges<span class="wb-inv"> - Design guide</span></a></li>
+					<li><a href="colour-en.html">Colour<span class="wb-inv"> - Design guide</span></a></li>
+				</ul>
+			</section>
+
+			<section>
+				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="../accessibility/colour-en.html">Colour<span class="wb-inv"> - Accessibility guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header mrgn-tp-md" id="description">Description</h2>
+	<p>(Info goes here)</p>
+</section>
+
+<section>
+	<h2 class="page-header" id="options">Label options</h2>
+	<p>Label options:</p>
+	<ul class="list-inline">
+		<li><span class="label label-default">Default</span></li>
+		<li><span class="label label-primary">Primary</span></li>
+		<li><span class="label label-success">Success</span></li>
+		<li><span class="label label-info">Info</span></li>
+		<li><span class="label label-warning">Warning</span></li>
+		<li><span class="label label-danger">Danger</span></li>
+	</ul>
+
+	<pre class="mrgn-tp-md"><code class="html">&lt;ul class=&quot;list-inline&quot;&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-default&quot;&gt;Default&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-primary&quot;&gt;Primary&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-success&quot;&gt;Success&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-info&quot;&gt;Info&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-warning&quot;&gt;Warning&lt;/span&gt;&lt;/li&gt;
+	&lt;li&gt;&lt;span class=&quot;label label-danger&quot;&gt;Danger&lt;/span&gt;&lt;/li&gt;
+&lt;/ul&gt;</code></pre>
+
+	<section>
+		<h3 id="examples">Examples</h3>
+		<p>Some text here <span class="label label-default">New</span></p>
+		<p>Some text here <span class="label label-primary">Updated</span></p>
+		<pre><code>&lt;p&gt;Some text here &lt;span class=&quot;label label-default&quot;&gt;New&lt;/span&gt;&lt;/p&gt; 
+&lt;p&gt;Some text here &lt;span class=&quot;label label-primary&quot;&gt;Updated&lt;/span&gt;&lt;/p&gt;</code></pre>
+	</section>
+
+	<div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
+		<section class="col-md-6">
+			<h3 class="mrgn-tp-0 text-success h4">Use when <span class="glyphicon glyphicon-ok-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+
+		<section class="col-md-6 brdr-lft">
+			<h3 class="mrgn-tp-0 text-danger h4">Do not use when <span class="glyphicon glyphicon-remove-circle"></span></h3>
+			<p>(Info goes here)</p>
+		</section>
+	</div>
+</section>
+
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
