--- a/site/pages/v4/design/links-en.hbs
+++ b/site/pages/v4/design/links-en.hbs
@@ -4,56 +4,70 @@
 	"language": "en",
 	"altLangPrefix": "links",
 	"css": ["http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome"],
-	"dateModified": "2014-02-28"
+	"dateModified": "2014-07-10"
 }
 ---
-<div class="wb-prettify all-pre">
- <div class="row">
-  <div class="col-md-8 mrgn-bttm-lg">
-   <div class="panel panel-default">
-    <div class="panel-heading">
-     <h2 class="panel-title">Table of contents</h2>
-    </div>
-    <div class="panel-body">
-     <ul>
-      <li><a href="#description">Description</a></li>
-      <li><a href="#default">Default appearance </a></li>
-     </ul>
-    </div>
-   </div>
-  </div>
-  <div class="col-md-4 pull-right mrgn-bttm-lg">
-   <div class="well">
-    <h2 class="h3 mrgn-tp-0">Related </h2>
-    <h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="alerts-en.html#links">Alert links<span class="wb-inv"> - Design guide</span></a></li>
-     <li> <a href="buttons-en.html">Button links<span class="wb-inv"> - Design guide</span></a></li>
-     <li> <a href="listgroup-en.html#links">List group links<span class="wb-inv"> - Design guide</span></a></li>
-     <li> <a href="pagination-en.html">Pagination links<span class="wb-inv"> - Design guide</span></a></li>
-    </ul>
-    <h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../accessibility/links-en.html">Links <span class="wb-inv">- Accessibility guide</span></a></li>
-    </ul>
-    <h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
-    <ul class="list-unstyled mrgn-lft-lg lst-spcd">
-     <li><a href="../writing/principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
-     <li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
-    </ul>
-   </div>
-  </div>
-  <div class="mrgn-lft-md mrgn-rght-md">
-   <h2 class="page-header" id="description">Description</h2>
-   <p>A link is a type of <a href="http://wet-boew.github.io/wet-boew/demos/opt-cont/kb-cv-en.html">user control</a> (text and/or image) in a web page that performs one or more of the following behaviours:</p>
-   <ul>
-    <li>Takes the user to another web page; or </li>
-    <li>Jumps to another location within the same web page; or</li>
-    <li>Performs user control functionality determined by client side scripting (JavaScript).</li>
-   </ul>
-   <h2 class="page-header" id="default">Default appearance</h2>
-   <p>The default appearance of a link is this: <a href="#" >Demo link</a></p>
-   <p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
-  </div>
- </div>
+<span class="wb-prettify all-pre"></span>
+
+<div class="row">
+	<section class="col-md-8 mrgn-bttm-lg">
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h2 class="panel-title">Table of contents</h2>
+			</header>
+			<div class="panel-body">
+				<ul>
+					<li><a href="#description">Description</a></li>
+					<li><a href="#default">Default appearance </a></li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="col-md-4 pull-right mrgn-bttm-lg">
+		<div class="well">
+			<h2 class="h3 mrgn-tp-0">Related</h2>
+			<section>
+				<h3 class="h4"><span class="fa fa-picture-o text-muted"></span> Design guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="alerts-en.html#links">Alert links<span class="wb-inv"> - Design guide</span></a></li>
+					<li> <a href="buttons-en.html">Button links<span class="wb-inv"> - Design guide</span></a></li>
+					<li> <a href="listgroup-en.html#links">List group links<span class="wb-inv"> - Design guide</span></a></li>
+					<li> <a href="pagination-en.html">Pagination links<span class="wb-inv"> - Design guide</span></a></li>
+				</ul>
+			</section>
+
+			<section>
+				<h3 class="h4"><span class="fa fa-wheelchair text-muted"></span> Accessibility guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="../accessibility/links-en.html">Links <span class="wb-inv">- Accessibility guide</span></a></li>
+				</ul>
+			</section>
+
+			<section>
+				<h3 class="h4"><span class="fa fa-font text-muted"></span> Writing guide</h3>
+				<ul class="list-unstyled mrgn-lft-lg lst-spcd">
+					<li><a href="../writing/principals-en.html#links">Link principles<span class="wb-inv"> - Writing guide</span></a></li>
+					<li><a href="../writing/formatting-en.html#links">Link formatting<span class="wb-inv"> - Writing guide</span></a></li>
+				</ul>
+			</section>
+		</div>
+	</section>
 </div>
+
+<section>
+	<h2 class="page-header" id="description">Description</h2>
+	<p>A link is a type of user control (text and/or image) in a web page that performs one or more of the following behaviours:</p>
+	<ul>
+		<li>Takes the user to another web page; or </li>
+		<li>Jumps to another location within the same web page; or</li>
+		<li>Performs user control functionality determined by client side scripting (JavaScript).</li>
+	</ul>
+</section>
+
+<section>
+	<h2 class="page-header" id="default">Default appearance</h2>
+	<p>The default appearance of a link is this: <a href="#" >Demo link</a></p>
+</section>
+
+<p class="mrgn-tp-lg"><span class="glyphicon glyphicon-info-sign"></span> Some of the code and documentation for this page is sourced from <a href="http://getbootstrap.com/" rel="external">Bootstrap</a></p>
